--- a/.github/workflows/backend-CI.yml
+++ b/.github/workflows/backend-CI.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Go to backend directory
+      run: cd backend
     - name: Install dependencies
       run: npm ci
     - name: Run Jest
