--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
     "version": "0.2.0",
     "configurations": [
+
       {
         "type": "node",
         "request": "launch",
@@ -9,6 +10,17 @@
         "runtimeArgs": ["run", "start"],
         "cwd": "${workspaceFolder}/backend",
         "console": "integratedTerminal"
+      },
+      {
+        "type": "chrome",
+        "request": "launch",
+        "name": "Frontend",
+        "url": "http://localhost:3001",
+        "webRoot": "${workspaceFolder}/frontend",
+        "preLaunchTask": "npm: start - frontend",
+        "runtimeArgs": [
+          "--new-window"
+        ]
       },
       {
         "type": "node",
