--- a/.github/workflows/backend-CI.yml
+++ b/.github/workflows/backend-CI.yml
@@ -36,7 +36,7 @@ jobs:
         working-directory: ./frontend/
     strategy:
       matrix:
-        node-version: [20.x] # Adjust this as necessary for your frontend
+        node-version: [20.x] 
 
     steps:
     - uses: actions/checkout@v2
@@ -44,7 +44,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     - name: Install dependencies
       run: npm ci
     - name: Run React-scripts test
