--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-environment-jsdom": "^29.7.0"
   }
+  
 }
