--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "jest-environment-jsdom": "^29.7.0"
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1"
   }
-  
 }
