--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "humps": "^2.0.1",
     "node-cron": "^3.0.3",
     "uuid": "^9.0.1"
   },
