Added custom test reported and updated github workflow from frontend

--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -32,3 +32,5 @@ jobs:
       run: npm test
       env:
         CI: true
+    - name: Publish Test Summary Results
+      run: npx github-actions-ctrf ctrf/ctrf-report.json      
