--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-ctrf-json-reporter": "^0.0.6"
   }
 }
