--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1"
+    "@testing-library/react": "^14.2.1",
+    "jest-ctrf-json-reporter": "^0.0.6"
   }
 }
