--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -1,4 +1,4 @@
-name: Full Test Workflow
+name: Tests
 
 on:
   push:
@@ -35,7 +35,7 @@ jobs:
       env:
         CI: true
     - name: Publish Test Summary Results
-      run: npx github-actions-ctrf ctrf/combined-report.json
+      run: npx github-actions-ctrf ctrf/ctrf-report.json 
 
   frontend-tests:
     runs-on: ubuntu-latest
@@ -59,4 +59,4 @@ jobs:
       env:
         CI: true
     - name: Publish Test Summary Results
-      run: npx github-actions-ctrf ctrf/combined-report.json
+        run: npx github-actions-ctrf ctrf/ctrf-report.json 
