--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,9 @@ jobs:
     - name: Publish Test Summary Results
       if: always()
       run: npx github-actions-ctrf ctrf/ctrf-report.json 
+    - name: Check test results
+      if: steps.run-tests.outcome == 'failure'
+      run: exit 1
 
   frontend-tests:
     runs-on: ubuntu-latest
@@ -64,3 +67,6 @@ jobs:
     - name: Publish Test Summary Results
       if: always()
       run: npx github-actions-ctrf ctrf/ctrf-report.json 
+    - name: Check test results
+      if: steps.run-tests.outcome == 'failure'
+      run: exit 1
