Continue on error in publishing test results

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,7 @@ jobs:
     - name: Publish Test Summary Results
       if: always()
       run: npx github-actions-ctrf ctrf/ctrf-report.json 
+      continue-on-error: true
     - name: Check test results
       if: steps.run-tests.outcome == 'failure'
       run: exit 1
@@ -67,6 +68,7 @@ jobs:
     - name: Publish Test Summary Results
       if: always()
       run: npx github-actions-ctrf ctrf/ctrf-report.json 
+      continue-on-error: true
     - name: Check test results
       if: steps.run-tests.outcome == 'failure'
       run: exit 1
