--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,8 +40,13 @@ jobs:
       run: npx github-actions-ctrf ctrf/ctrf-report.json 
     - name: Check test results
       if: always()
-      if: steps.run-tests.outcome == 'failure'
-      run: exit 1
+      run: |
+        if grep -q '"numFailedTests": 0' ctrf/ctrf-report.json; then
+          echo "All tests passed."
+        else
+          echo "Some tests failed."
+          exit 1
+        fi
 
   frontend-tests:
     runs-on: ubuntu-latest
@@ -70,5 +75,10 @@ jobs:
       run: npx github-actions-ctrf ctrf/ctrf-report.json 
     - name: Check test results
       if: always()
-      if: steps.run-tests.outcome == 'failure'
-      run: exit 1
+      run: |
+        if grep -q '"numFailedTests": 0' ctrf/ctrf-report.json; then
+          echo "All tests passed."
+        else
+          echo "Some tests failed."
+          exit 1
+        fi
