--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
+    "react-redux": "^8.0.5",
+    "@reduxjs/toolkit": "^1.9.0", 
     "jest-ctrf-json-reporter": "^0.0.6",
     "react-app-rewired": "^2.2.1"
   }
