--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
     "socket.io-client": "^4.7.4",
@@ -48,11 +48,11 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
-    "react-redux": "^8.0.5",
-    "@reduxjs/toolkit": "^1.9.0", 
     "jest-ctrf-json-reporter": "^0.0.6",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "react-redux": "^8.0.5"
   }
 }
