--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,5 @@
 REACT_APP_BACKEND_URL=http://localhost:3000
 PORT=3001
+REACT_APP_COGNITO_DOMAIN=footieusers.auth.eu-west-2.amazoncognito.com
+REACT_APP_REDIRECT_SIGN_IN=http://localhost:3001/
+REACT_APP_REDIRECT_SIGN_OUT=http://localhost:3001/
