--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,4 @@
 REACT_APP_BACKEND_URL=https://api.playfootie.net
+REACT_APP_COGNITO_DOMAIN=footieusers.auth.eu-west-2.amazoncognito.com
+REACT_APP_REDIRECT_SIGN_IN=https://www.playfootie.net/
+REACT_APP_REDIRECT_SIGN_OUT=https://www.playfootie.net/
